<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">脉酷词典</string>
    <string name="back">返回</string>
    <string name="query">搜索</string>
    <string name="cd_user_state">用户在线状态</string>
    <string name="cd_settings">设置</string>
    <string name="cd_share_word">分享词条</string>
    <string name="cd_enjoy">点赞</string>
    <string name="cd_rece_bg">背景图</string>
    <string name="cd_log">应用图标</string>
    <string name="cd_select">选择用户</string>
    <string name="str_online">登录</string>
    <string name="str_input_word">请输入单词</string>
    <string name="str_settings">配置</string>
    <string name="str_server_addr">服务器地址</string>
    <string name="str_server_port">服务器端口</string>
    <string name="str_addr">地址</string>
    <string name="str_port">端口</string>
    <string name="str_ok">确定</string>
    <string name="str_input_user">请输入用户名</string>
    <string name="str_input_pwd">请输入密码</string>
    <string name="str_user">用户</string>
    <string name="str_pwd">密码</string>
    <string name="str_signin">登录</string>
    <string name="str_register">注册</string>

</resources>
