<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="#d0000000"
        android:padding="5dp" >

        <ImageButton
            android:id="@+id/setting_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="#00ffffff"
            android:scaleType="centerInside"
            android:src="@drawable/back"
            android:contentDescription="@string/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/str_settings"
            android:textColor="#ffffffff"
            android:textSize="18sp" />

    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:stretchColumns="1" >

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/str_addr"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/server_addr"
                android:hint="@string/str_server_addr" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/str_port"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/server_port"
                android:hint="@string/str_server_port" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/setting_ok"
                android:layout_span="2"
                android:background="@drawable/button_bg"
                android:text="@string/str_ok"
                android:textColor="#ffffffff" />

        </TableRow>
    </TableLayout>

</RelativeLayout>
