<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffffff" >
    
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:stretchColumns="1" >

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp" >

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_span="2"
                android:contentDescription="@string/cd_log"
                android:scaleType="fitCenter"
                android:src="@drawable/log" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/str_user"
                android:textColor="#ff000000"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/name_edit"
                android:hint="@string/str_input_user"
                android:textColor="#ff000000" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/str_pwd"
                android:textColor="#ff000000"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/password_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/str_input_pwd"
                android:inputType="textPassword"
                android:textColor="#ff000000" >

                <requestFocus />
            </EditText>

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="20dp" >

            <Button
                android:id="@+id/sign_in_bt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:background="@drawable/button_bg"
                android:text="@string/str_signin"
                android:textColor="#ffffffff" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/register_bt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:background="@drawable/button_bg"
                android:text="@string/str_register"
                android:textColor="#ffffffff" />

        </TableRow>
    </TableLayout>

</RelativeLayout>
