<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffffff"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#d0000000"
        android:padding="5dp" >

        <ImageButton
            android:id="@+id/query_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:background="#00ffffff"
            android:scaleType="centerInside"
            android:src="@drawable/back"
            android:contentDescription="@string/back" />

        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/query_back"
            android:layout_toRightOf="@+id/query_back"
            android:text="@string/back"
            android:textColor="#ffffffff"
            android:textSize="18sp" />

        <Button
            android:id="@+id/query_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="#00ffffff"
            android:text="@string/str_ok"
            android:textColor="#ffffffff" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp" >

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:scaleType="fitCenter"
            android:src="@drawable/query"
            android:contentDescription="@string/query" />

        <EditText
            android:id="@+id/query_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:hint="@string/str_input_user" />

        <Button
            android:id="@+id/query_inner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:background="#00ffffff"
            android:text="@string/query"
            android:textSize="15sp" />

    </LinearLayout>

    <ListView
        android:id="@+id/user_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

</ListView>

</LinearLayout>
