<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.zzw.MainActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#d0000000"
        android:padding="5dp" >

        <ImageButton
            android:id="@+id/user_state"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/user_imgbg"
            android:contentDescription="@string/cd_user_state"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:scaleType="centerInside"
            android:src="@drawable/log" />

        <TextView
            android:id="@+id/online"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/user_state"
            android:layout_toRightOf="@id/user_state"
            android:text="@string/str_online"
            android:textColor="#ffffffff" />

        <ImageButton
            android:id="@+id/setting"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="#00ffffff"
            android:padding="2dp"
            android:scaleType="centerInside"
            android:src="@drawable/setting"
            android:contentDescription="@string/cd_settings" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp" >

        <EditText
            android:id="@+id/word_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:hint="@string/str_input_word" />

        <Button
            android:id="@+id/start_query"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg"
            android:text="@string/query"
            android:textColor="#ffffffff" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp" >

            <TextView
                android:id="@+id/word_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp" />

            <ImageButton
                android:id="@+id/share_bt"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="#00ffffff"
                android:scaleType="centerInside"
                android:src="@drawable/share"
                android:contentDescription="@string/cd_share_word" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="#500000ff"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/word_title1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:background="#00ffffff"
                android:textColor="#ffffffff" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/word_title1"
                android:background="#500000ff"
                android:padding="5dp" >

                <TextView
                    android:id="@+id/word_trans1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </ScrollView>

            <TextView
                android:id="@+id/word_num1"
                android:layout_width="50dp"
                android:layout_height="25dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:gravity="start|center_vertical"
                android:textColor="#ffffffff"
                android:textSize="12sp" />

            <ImageButton
                android:id="@+id/word_enjoy1"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_alignParentBottom="true"
                android:layout_toLeftOf="@id/word_num1"
                android:layout_toStartOf="@id/word_num1"
                android:background="#00ffffff"
                android:scaleType="centerInside"
                android:src="@drawable/notenjoy"
                android:contentDescription="@string/cd_enjoy" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="#500000ff"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/word_title2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:background="#00ffffff"
                android:textColor="#ffffffff" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/word_title2"
                android:background="#500000ff"
                android:padding="5dp" >

                <TextView
                    android:id="@+id/word_trans2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </ScrollView>

            <TextView
                android:id="@+id/word_num2"
                android:layout_width="50dp"
                android:layout_height="25dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:gravity="start|center_vertical"
                android:textColor="#ffffffff"
                android:textSize="12sp" />

            <ImageButton
                android:id="@+id/word_enjoy2"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_alignParentBottom="true"
                android:layout_toLeftOf="@id/word_num2"
                android:layout_toStartOf="@id/word_num2"
                android:background="#00ffffff"
                android:scaleType="centerInside"
                android:src="@drawable/notenjoy"
                android:contentDescription="@string/cd_enjoy" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="#500000ff"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/word_title3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:background="#00ffffff"
                android:textColor="#ffffffff" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/word_title3"
                android:background="#500000ff"
                android:padding="5dp" >

                <TextView
                    android:id="@+id/word_trans3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </ScrollView>

            <TextView
                android:id="@+id/word_num3"
                android:layout_width="50dp"
                android:layout_height="25dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:gravity="start|center_vertical"
                android:textColor="#ffffffff"
                android:textSize="12sp" />

            <ImageButton
                android:id="@+id/word_enjoy3"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_alignParentBottom="true"
                android:layout_toLeftOf="@id/word_num3"
                android:layout_toStartOf="@id/word_num3"
                android:background="#00ffffff"
                android:scaleType="centerInside"
                android:src="@drawable/notenjoy"
                android:contentDescription="@string/cd_enjoy" />

        </RelativeLayout>
    </LinearLayout>

</LinearLayout>